improve error handling in lessons 1 and 5

--- a/lesson5/package.json
+++ b/lesson5/package.json
@@ -2,9 +2,9 @@
   "name": "nodejs-express",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "app": "node app.js"
+    "app": "node server.js"
   },
   "author": "",
   "license": "ISC",
